--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
     "react-router-dom": "^6.21.3"
   }
 }
